# no-more-paper-2

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  store.py
src/no_more_paper/: blob.py  dependencies.py  document.py  main.py
src/no_more_paper/api/: documents.py
src/no_more_paper/blob/: blob_store.py  filesystem_blob_store.py
src/no_more_paper/db/: document_database.py  sqlite_database.py  sqlite_document_database.py
src/no_more_paper/db/sqlite/: document_database.py  engine.py  schema.py
tests/: test_filesystem_blob_store.py
