[project]
name = "no-more-paper-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "sqlalchemy>=2.0.45",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "FAST"]
ignore = ["ANN401"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
