[project]
name = "no-more-paper-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"
per-file-ignores = { "tests/**.py" = ["ANN"] }

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "FAST"]
ignore = ["ANN401"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
